--- a/weatherService/index.html
+++ b/weatherService/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
-    
-    <style src="/style.css"></style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body style="background-color: gray;">
-    <div style="-webkit-text-fill-color: white; font-size: 20px;"><p id="forWeather"></p></div>
+    <div class="weatherDataDiv"><p id="forWeather"></p></div>
     <script src="/app.js"></script>
 </body>
 </html>
